# datasette-tailscale

./: .gitignore  README.md  hello_tailnet.py  pyproject.toml  research.md
.github/workflows/: publish.yml  test.yml
datasette_tailscale/: __init__.py
tests/: test_tailscale.py
