[project]
name = "datasette-tailscale"
version = "0.1"
description = "Run a Datasette instance on a Tailscale network"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette"
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/datasette/datasette-tailscale"
Changelog = "https://github.com/datasette/datasette-tailscale/releases"
Issues = "https://github.com/datasette/datasette-tailscale/issues"
CI = "https://github.com/datasette/datasette-tailscale/actions"

[project.entry-points.datasette]
tailscale = "datasette_tailscale"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

